
  * frontend/dplint:
    + [JW,NT] Remove "." from Perl's search path.  (Mitigates: #588017)

  * helpers/coll/*:
    + [JW,NT] Remove "." from Perl's search path.  (Mitigates: #588017)

  * lib/Lintian/*.pm:
    + [JW] Fix typos.

  * man/lintian.pod.in:
    + [JW] Fix typo.

  * t:
    + [JW,NT] Update tests to work now that dpkg validates
      debian/tests/control.  (Closes: #829635)

 -- Niels Thykier <niels@thykier.net>  Sun, 19 Jun 2016 20:17:52 +0000

lintian (2.5.45) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - build-depends-arch-without-arch-dependent-binary
      - debhelper-autoscript-in-maintainer-scripts
      - no-strong-digests-in-dsc
      - testsuite-dependency-has-unparsable-elements
    + Removed:
      - build-depends-arch-without-arch-dependant-binary
      - init.d-script-missing-lsb-description

  * checks/application-not-library.{desc,pm}:
    + [JW] Use HTTPS for Alioth URLs.
    + [AB] Don't emit application-in-library-section for packages starting
      with "cpan", not only "cpanplus" and "cpanminus".
  * checks/binaries.{desc,pm}:
    + [NT] Rewrite description for hardening-no-bindnow.  There
      is no references to why bindnow would cause issues.
    + [AB] Relax regexp for missing-dependency-on-perlapi to allow letters
      inside the API name. Thanks Niko Tyni! (Closes: #823437)
  * checks/debhelper.pm:
    + [NT] The /usr/share/R/debian/r-cran.mk file implies
      /usr/share/cdbs/1/rules/debhelper.mk.
  * checks/fields.{desc,pm}:
    + [JW] Fix typos.
    + [AB] Add new check for weak checksums in source packages:
      new tag no-strong-digests-in-dsc (Closes: #824916)
  * checks/files.desc:
    + [BR] Do not suggest unsupported Multi-arch: no.
      (Closes: #816455)
    + [JW] Fix typos.
  * checks/files.pm:
    + [JW] Fix false positive gzip-file-is-not-multi-arch-same-safe when
      processing multiple debs.  (Closes: #738444)
  * checks/info-files.desc: