@@ -65,6 +65,8 @@ lintian (2.5.46) UNRELEASED; urgency=medium
   * t:
     + [JW,NT] Update tests to work now that dpkg validates
       debian/tests/control.  (Closes: #829635)
+    + [NT] Apply patch from Adam Conrad to make some tests work
+      when the compiler uses -fPIE by default.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 19 Jun 2016 20:17:52 +0000
 
